crates/data-dict/tests/snapshots/validate_meta__type_mismatch_reported.snap
---
source: crates/data-dict/tests/validate_meta.rs
expression: "common::sanitize(&problems.render().join(\"\\n\"), &dir)"
---
Error: [M01] A column's data must match its declared type.
    ╭─[ dict.yaml:12:15 ]
    │
  4 │   animals:
    │ 
 11 │       - name: weight
 12 │         type: string
    │               ───┬──  
    │                  ╰──── the data is `number`
────╯
